# docs/swagger.json
@@ -109,9 +109,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Deleted successfully",
+                        "description": "success message",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Message"
+                            "$ref": "#/definitions/models.SuccessMessageResponse"
                         }
                     },
                     "500": {
@@ -266,7 +266,7 @@
                     "200": {
                         "description": "success message",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Message"
+                            "$ref": "#/definitions/models.SuccessMessageResponse"
                         }
                     },
                     "500": {
@@ -311,6 +311,41 @@
             }
         },
         "/return": {
+            "get": {
+                "description": "Gets list of all upcoming returns of books in timeframe. Expect date (\"DD-MM-YYYY\") as query paramter not mandatory, and lists all books which has due date before the date provided. All upcoming books will belisted if dont provide any date.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Book-Transactions"
+                ],
+                "summary": "Gets list of all Upcoming Returns",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "date",
+                        "name": "date",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "details of Upcomingbooks and member",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.UpcomingReturnsResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "error message",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "patch": {
                 "description": "Updates the book-transaction, returned_date and penalty is populated in the system, member_id and book_id should be passed in JSON.",
                 "consumes": [
@@ -352,14 +387,6 @@
         }
     },
     "definitions": {
-        "handlers.Message": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
         "models.Book": {
             "type": "object",
             "properties": {
@@ -445,7 +472,7 @@
         "models.BookTransactionRequest": {
             "type": "object",
             "properties": {
-                "book_id": {
+                "book_ids": {
                     "type": "array",
                     "items": {
                         "type": "integer"
@@ -533,6 +560,37 @@
                     "type": "string"
                 },
                 "phone": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.SuccessMessageResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpcomingReturnsResponse": {
+            "type": "object",
+            "properties": {
+                "bookID": {
+                    "type": "integer"
+                },
+                "borrowDate": {
+                    "type": "string"
+                },
+                "dueDate": {
+                    "type": "string"
+                },
+                "memberID": {
+                    "type": "string"
+                },
+                "memberName": {
+                    "type": "string"
+                },
+                "title": {
                     "type": "string"
                 }
             }
